[gd_scene load_steps=8 format=2]

[ext_resource path="res://MossModel.gd" type="Script" id=1]
[ext_resource path="res://Textures/darkgreentrans.tres" type="Material" id=2]
[ext_resource path="res://Textures/darkgreen.tres" type="Material" id=3]
[ext_resource path="res://Textures/midgreen.tres" type="Material" id=4]

[sub_resource type="OpenSimplexNoise" id=1]
period = 100.6
persistence = 1.0

[sub_resource type="NoiseTexture" id=2]
noise = SubResource( 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.333333, 0.262745, 0.14902, 0.941176 )
albedo_texture = SubResource( 2 )

[node name="MossModel" type="Spatial"]
script = ExtResource( 1 )

[node name="RegularTrans" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.3
material = ExtResource( 2 )

[node name="DeepGreen" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.3
material = ExtResource( 3 )

[node name="MidGreen" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.3
material = ExtResource( 4 )

[node name="Brown" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.3
material = SubResource( 3 )
